# django-bulk-copy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENCE  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  manage.py  pyproject.toml  runtests.sh  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml  python-pypi.yml
bulk_copy/: __init__.py  bulk_copy.py  manager.py  utils.py
bulk_copy/engines/: base.py  postgresql.py
tests/: settings.py
tests/bulk_test/: __init__.py  apps.py  models.py  tests.py
tests/bulk_test/migrations/: 0001_initial.py
tests/bulk_test/tests/: test_base.py  test_manager.py  test_postgres.py  test_utils.py  utils.py
