[tool.poetry]
name = "django-bulk-copy"
version = "0.1.3"
authors = ["Ahmet Burak Ozyurt <ahmetbozyurtt@gmail.com>"]
maintainers = [
    "Ahmet Burak Ozyurt <ahmetbozyurtt@gmail.com>",
    "Onuralp SEZER <thunderbirdtr@gmail.com>",
]
packages = [{include = "bulk_copy"}]
description = "Faster way to create your models in Django"
keywords = ["django","postgres","django-bulk-copy","bulk","t-sql"]
exclude = ["tests/"]


classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ahmetveburak/django-bulk-copy/issues"
homepage = "https://github.com/ahmetveburak/django-bulk-copy"
repository = "https://github.com/ahmetveburak/django-bulk-copy"
documentation = "https://github.com/ahmetveburak/django-bulk-copy/blob/main/README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = ">=3"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11"
coverage = "^7.0.1"
pre-commit = "^2.21.0"

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = []
# Same as Black.
line-length = 119

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
per-file-ignores = { }

[tool.bandit]
target = ["tests", "bulk_copy"]
tests = ["B201", "B301"]




[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
tox = "^4.3.2"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
